# galaxy-container

./: .gitignore  .gitmodules  .terraform-docs.yml  CONTRIBUTING.md  README.md  ansible.cfg  application.playbook.yml  backend.docker  backend.tf  buildah_to_docker.sh  buildah_to_hub.sh  changeme.auto.tfvars  client.buildah  client.docker  client.nginx.conf  container.puml  destination.tf  docker-compose.yml  inventory.ini  main.tf  object_store.tf  requirements.txt  setup.cfg  setup.py  standalone.buildah  test_race.py  uwsgi.buildah  variables.tf  vars.yml  webserver.docker  webserver.playbook.yml  worker.playbook.yml
.github/workflows/: build-containers.yml  documentation.yaml
config/: galaxy.yml.defaults
deployment/aws/: README.md  changeme.auto.tfvars  deploy.sh  destroy.sh  main.tf  outputs.tf  variables.tf
deployment/docker/: README.md  changeme.auto.tfvars  deploy.sh  destroy.sh  main.tf  outputs.tf  variables.tf
destinations/: docker.tf  outputs.tf  variables.tf
destinations/aws/: README.md  autoscaler.tf  dashboard.tf  database.tf  eks.tf  mail.tf  main.tf  mq.tf  network.tf  outputs.tf  storage.tf  util.tf  variables.tf
destinations/azure/: README.md
destinations/docker/: README.md  app.tf  celery_beat.tf  celery_worker.tf  database.tf  main.tf  mq.tf  output.tf  outputs.tf  storage.tf  tusd.tf  variables.tf  visualizations.tf  web.tf  worker.tf
destinations/k8s/: README.md  app.tf  celery_beat.tf  celery_worker.tf  config.tf  database.tf  main.tf  metrics.tf  outputs.tf  scheduler.tf  storage.tf  tusd.tf  variables.tf  visualizations.tf  web.tf  (+1 more)
(+81 files in other folders)
