[metadata]
name = galaxy-container
author = Nolan Woods
author_email = nolan_w@sfu.ca
summary = Scalable Galaxy containers
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/brinkmanlab/galaxy-container
license = MIT Amended
classifier =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    galaxy
    bioinformatics
    container

[files]
packages =
    galaxy-container
[entry_points]
console_scripts =
    galaxy-container = feature_merge.__main__:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
[bdist_wheel]
universal = 1

[options]
test_suite = tests

